# jogoGB

./: CMakeLists.txt  mapa.ptm
include/: Animation.hpp  Drawable.hpp  Enemy.hpp  EnemyLifeBar.h  GLEnums.hpp  GameObject.hpp  Hero.hpp  Point.hpp  PointControl.hpp  Projectile.hpp  SpriteId.hpp  png_texture.h  slidemap_help.hpp
src/: Animation.cpp  Drawable.cpp  Enemy.cpp  EnemyLifeBar.cpp  GameObject.cpp  Hero.cpp  Main.cpp  PointControl.cpp  Projectile.cpp  png_texture.cpp  slidemap_help.cpp
textures/: _oldbichooo_bin.ptm  hero.ptm
